install gorilla mux; move to path parameters
