# docs/swagger.json
@@ -24,8 +24,8 @@
                 }
             }
         },
-        "/subscribe": {
-            "get": {
+        "/subscribe/{address}": {
+            "post": {
                 "description": "Subscribe to notifications for incoming/outgoing transactions for a specific Ethereum address",
                 "produces": [
                     "application/json"
@@ -36,7 +36,7 @@
                         "type": "string",
                         "description": "Ethereum address to subscribe to",
                         "name": "address",
-                        "in": "query",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -65,7 +65,7 @@
                 }
             }
         },
-        "/transactions": {
+        "/transactions/{address}": {
             "get": {
                 "description": "Retrieve inbound and outbound transactions for a subscribed Ethereum address",
                 "produces": [
@@ -77,7 +77,7 @@
                         "type": "string",
                         "description": "Ethereum address to retrieve transactions for",
                         "name": "address",
-                        "in": "query",
+                        "in": "path",
                         "required": true
                     }
                 ],
